# near-validator-cli-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: code_style.yml  release-plz.yml  release.yml  test.yml
src/: common.rs  main.rs
src/network_view_at_block/: mod.rs
src/proposals/: mod.rs
src/self_update/: mod.rs
src/staking/: mod.rs  stake_proposal.rs  unstake_proposal.rs  view_stake.rs
src/types/: mod.rs  partial_genesis_config.rs  partial_protocol_config.rs
src/update_self/: mod.rs
src/validators/: block_id.rs  epoch_id.rs  latest.rs  mod.rs
src/validators/block_id/: mod.rs
src/validators/epoch_id/: latest.rs  mod.rs  next.rs
src/validators/network_view_at_block/: mod.rs
wix/: main.wxs
