[package]
name = "near-validator-cli"
version = "0.1.0"
authors = [
    "FroVolod <frol_off@meta.ua>",
    "frol <frolvlad@gmail.com>",
    "Near Inc <hello@nearprotocol.com>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "near-validator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
inquire = "0.6"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

tokio = { version = "1.0", features = ["rt-multi-thread"] }
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

shell-words = "1.0.0"
prettytable = "0.10.0"

color-eyre = "0.6"

num-rational = "0.3.2"

near-crypto = "0.20.0"
near-primitives = "0.20.0"
near-jsonrpc-client = "0.8.0"
near-jsonrpc-primitives = "0.20.0"

interactive-clap = "0.2.8"
interactive-clap-derive = "0.2.8"

near-cli-rs = { version = "0.7.7", default-features = false }
