[package]
name = "near-validator"
version = "0.1.9"
authors = [
    "FroVolod <frol_off@meta.ua>",
    "frol <frolvlad@gmail.com>",
    "Near Inc <hello@nearprotocol.com>",
]
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/near-cli-rs/near-validator-cli-rs"
description = "near-validator is your human-friendly companion that helps to interact with NEAR Validators from command line."

[package.metadata.wix]
upgrade-guid = "C5573F8E-07D3-4504-8A6D-F77C90CB42C3"
path-guid = "A985F448-11E8-41B9-A8A4-F23CCD7ECC5C"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "near-validator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
inquire-clack = "0.1.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

tokio = { version = "1.0", features = ["rt-multi-thread"] }
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

shell-words = "1.0.0"
prettytable = "0.10.0"

color-eyre = "0.6"

num-rational = "0.3.2"

semver = { version = "1.0.4", optional = true }
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "compression-flate2",
], optional = true }

near-crypto = "0.34"
near-primitives = "0.34"
near-jsonrpc-client = { version = "0.20", features = ["any"] }
near-jsonrpc-primitives = "0.34"

interactive-clap = "0.3"
interactive-clap-derive = "0.3"

near-cli-rs = { version = "0.23.5", default-features = false }
near-token = { version = "0.3", features = [
    "serde",
    "borsh",
    "interactive-clap",
] }

[features]
default = ["self-update"]
self-update = ["self_update", "semver"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.29.0"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "aarch64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Which actions to run on pull requests
pr-run-mode = "upload"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"
x86_64-unknown-linux-gnu = "ubuntu-22.04"
x86_64-pc-windows-msvc = "windows-2022"
aarch64-pc-windows-msvc = "windows-2025"
x86_64-apple-darwin = "macos-15-intel"
aarch64-apple-darwin = "macos-14"

[workspace.metadata.dist.dependencies.apt]
libudev-dev = { version = "*", targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
] }
